--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,6 @@
                 "output": "/images/"
               },
               "src/manifest.webmanifest",
-              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.scss",
@@ -115,6 +114,42 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "static": {
+              "budgets": [
+                { "type": "initial", "maximumWarning": "4mb", "maximumError": "6mb" },
+                { "type": "anyComponentStyle", "maximumWarning": "100kb", "maximumError": "200kb" }
+              ],
+              "optimization": {
+                "scripts": true,
+                "styles": { "minify": true, "inlineCritical": false },
+                "fonts": true
+              },
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.static.ts"
+                }
+              ],
+              "baseHref": "./",
+              "deployUrl": "./",
+              "outputHashing": "all",
+
+              "assets": [
+                "src/favicon.ico",
+                "src/assets",
+                "src/images",
+                "src/Lagensymbole",
+                {
+                  "glob": "**/*",
+                  "input": "src/images",
+                  "output": "images/"
+                },
+                "src/manifest.webmanifest",
+                { "glob": "**/*", "input": "node_modules/sql.js/dist", "output": "assets/sqljs" },
+                { "glob": "app.sqlite", "input": "src/assets/db", "output": "assets/db" },
+                { "glob": "sw.js", "input": "src/static", "output": "/" }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -130,6 +165,9 @@
             },
             "prodServer": {
               "buildTarget": "gossembrot-db:build:prodServer"
+            },
+            "static": {
+              "buildTarget": "gossembrot-db:build:static"
             }
           },
           "defaultConfiguration": "development",
