--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:test": "ng build --configuration=test-server && ./copy-htaccess.sh test-server",
-    "build:prod": "ng build --configuration=production && ./copy-htaccess.sh production",
-    "build:static": "ng build --configuration static",
+    "db:build": "node tools/build-db.js",
+    "build:test": "ng build --configuration=test-server && ./tools/copy-htaccess.sh test-server",
+    "build:prod": "ng build --configuration=production && ./tools/copy-htaccess.sh production",
+    "build:static:apache": "npm run db:build && ng build --configuration static-apache && ./tools/copy-htaccess.sh static-apache",
+    "build:static:local": "ng build --configuration=static-local",
+    "serve:static": "npm run build:static:local && http-server dist/gossembrot-db_static -p 4201 -c-1 --cors",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "api": "node api/local-server.js",
@@ -62,11 +65,13 @@
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.62.0",
+    "better-sqlite3": "^12.2.0",
     "dependency-cruiser": "^13.0.5",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
+    "http-server": "^14.1.1",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -74,6 +79,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "mysql2": "^3.5.0",
+    "papaparse": "^5.5.3",
     "prettier": "^3.0.0",
     "typescript": "~5.4.5",
     "webpack": "^5.92.1"
