--- a/src/.htaccess
+++ b/src/.htaccess
@@ -14,4 +14,4 @@ RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
 RewriteRule ^ - [L]
 
 # If the requested resource doesn't exist, use index.html
-RewriteRule ^ /gossembrot-db/index.html
+RewriteRule ^ /gossembrot-portal/index.html
