--- a/angular.json
+++ b/angular.json
@@ -178,6 +178,37 @@
                 { "glob": "**/*",               "input": "node_modules/sql.js/dist", "output": "assets/sqljs" },
                 { "glob": "app.sqlite",         "input": "src/assets/db",      "output": "assets/db" }
               ]
+            },
+            "ghpages": {
+              "budgets": [
+                { "type": "initial", "maximumWarning": "4mb", "maximumError": "6mb" },
+                { "type": "anyComponentStyle", "maximumWarning": "100kb", "maximumError": "200kb" }
+              ],
+              "optimization": {
+                "scripts": true,
+                "styles": { "minify": true, "inlineCritical": false },
+                "fonts": true
+              },
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.ghpages.ts"
+                }
+              ],
+              "baseHref": "./",
+              "deployUrl": "./",
+              "outputPath": "dist/gossembrot-portal_static",
+              "outputHashing": "all",
+              "assets": [
+                "src/favicon.ico",
+                "src/assets",
+                "src/images",
+                "src/Lagensymbole",
+                { "glob": "**/*", "input": "src/images", "output": "images/" },
+                { "glob": "**/*", "input": "node_modules/sql.js/dist", "output": "assets/sqljs" },
+                { "glob": "app.sqlite", "input": "src/assets/db", "output": "assets/db" },
+                { "glob": "sw.js", "input": "src/static", "output": "/" }
+              ]
             }
           },
           "defaultConfiguration": "production"
