--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
                 "input": "src/images",
                 "output": "/images/"
               },
-              "src/manifest.webmanifest",
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.scss",
@@ -117,12 +117,23 @@
             },
             "static-apache": {
               "budgets": [
-                { "type": "initial", "maximumWarning": "4mb", "maximumError": "6mb" },
-                { "type": "anyComponentStyle", "maximumWarning": "100kb", "maximumError": "200kb" }
+                {
+                  "type": "initial",
+                  "maximumWarning": "4mb",
+                  "maximumError": "6mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "100kb",
+                  "maximumError": "200kb"
+                }
               ],
               "optimization": {
                 "scripts": true,
-                "styles": { "minify": true, "inlineCritical": false },
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                },
                 "fonts": true
               },
               "fileReplacements": [
@@ -135,7 +146,6 @@
               "deployUrl": "/gossembrot-portal_static/",
               "outputPath": "dist/gossembrot-portal_static",
               "outputHashing": "all",
-
               "assets": [
                 "src/favicon.ico",
                 "src/assets",
@@ -147,24 +157,49 @@
                   "output": "images/"
                 },
                 "src/manifest.webmanifest",
-                { "glob": "**/*", "input": "node_modules/sql.js/dist", "output": "assets/sqljs" },
-                { "glob": "app.sqlite", "input": "src/assets/db", "output": "assets/db" },
-                { "glob": "sw.js", "input": "src/static", "output": "" }
+                {
+                  "glob": "**/*",
+                  "input": "node_modules/sql.js/dist",
+                  "output": "assets/sqljs"
+                },
+                {
+                  "glob": "app.sqlite",
+                  "input": "src/assets/db",
+                  "output": "assets/db"
+                },
+                {
+                  "glob": "sw.js",
+                  "input": "src/static",
+                  "output": ""
+                }
               ]
             },
             "static-local": {
               "budgets": [
-                { "type": "initial", "maximumWarning": "4mb", "maximumError": "6mb" },
-                { "type": "anyComponentStyle", "maximumWarning": "100kb", "maximumError": "200kb" }
+                {
+                  "type": "initial",
+                  "maximumWarning": "4mb",
+                  "maximumError": "6mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "100kb",
+                  "maximumError": "200kb"
+                }
               ],
               "optimization": {
                 "scripts": true,
-                "styles": { "minify": true, "inlineCritical": false },
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                },
                 "fonts": true
               },
               "fileReplacements": [
-                { "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.static-local.ts" }
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.static-local.ts"
+                }
               ],
               "baseHref": "/",
               "deployUrl": "/",
@@ -174,19 +209,42 @@
                 "src/favicon.ico",
                 "src/assets",
                 "src/Lagensymbole",
-                { "glob": "sw.js",              "input": "src/static",         "output": "" },
-                { "glob": "**/*",               "input": "node_modules/sql.js/dist", "output": "assets/sqljs" },
-                { "glob": "app.sqlite",         "input": "src/assets/db",      "output": "assets/db" }
+                {
+                  "glob": "sw.js",
+                  "input": "src/static",
+                  "output": ""
+                },
+                {
+                  "glob": "**/*",
+                  "input": "node_modules/sql.js/dist",
+                  "output": "assets/sqljs"
+                },
+                {
+                  "glob": "app.sqlite",
+                  "input": "src/assets/db",
+                  "output": "assets/db"
+                }
               ]
             },
             "static-ghpages": {
               "budgets": [
-                { "type": "initial", "maximumWarning": "4mb", "maximumError": "6mb" },
-                { "type": "anyComponentStyle", "maximumWarning": "100kb", "maximumError": "200kb" }
+                {
+                  "type": "initial",
+                  "maximumWarning": "4mb",
+                  "maximumError": "6mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "100kb",
+                  "maximumError": "200kb"
+                }
               ],
               "optimization": {
                 "scripts": true,
-                "styles": { "minify": true, "inlineCritical": false },
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                },
                 "fonts": true
               },
               "fileReplacements": [
@@ -204,10 +262,26 @@
                 "src/assets",
                 "src/images",
                 "src/Lagensymbole",
-                { "glob": "**/*", "input": "src/images", "output": "images/" },
-                { "glob": "**/*", "input": "node_modules/sql.js/dist", "output": "assets/sqljs" },
-                { "glob": "app.sqlite", "input": "src/assets/db", "output": "assets/db" },
-                { "glob": "sw.js", "input": "src/static", "output": "/" }
+                {
+                  "glob": "**/*",
+                  "input": "src/images",
+                  "output": "images/"
+                },
+                {
+                  "glob": "**/*",
+                  "input": "node_modules/sql.js/dist",
+                  "output": "assets/sqljs"
+                },
+                {
+                  "glob": "app.sqlite",
+                  "input": "src/assets/db",
+                  "output": "assets/db"
+                },
+                {
+                  "glob": "sw.js",
+                  "input": "src/static",
+                  "output": "/"
+                }
               ]
             }
           },
