--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "api": "node api/local-server.js",
     "registerPassword": "node tools/registerPassword.js",
     "compodoc": "npx compodoc -p tsconfig.doc.json",
-    "export-structure-png": "npx dependency-cruiser --exclude \"node_modules\" --include-only \"\\.ts$\" --output-type dot src/ > dependency-graph.dot && dot -Tpng -o dependency-graph.png dependency-graph.dot",
-    "generate-docs": "npm run compodoc && npm run export-structure-png",
+    "depgraph": "npx depcruise src --config .dependency-cruiser.json --output-type dot > dependency-graph.dot && dot -Tpng -o dependency-graph.png dependency-graph.dot",
+    "generate-docs": "npm run compodoc && npm run depgraph",
     "lint": "ng lint",
     "format": "prettier --write 'src/**/*.ts'"
   },
@@ -58,7 +58,7 @@
     "@angular-eslint/builder": "^17.5.3",
     "@angular-eslint/eslint-plugin": "^17.5.3",
     "@angular-eslint/eslint-plugin-template": "^17.5.3",
-    "@angular-eslint/schematics": "^17.5.3",
+    "@angular-eslint/schematics": "^20.2.0",
     "@angular-eslint/template-parser": "17.5.3",
     "@angular/cli": "^17.3.10",
     "@angular/compiler-cli": "^17.3.12",
@@ -67,7 +67,7 @@
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.62.0",
     "better-sqlite3": "^12.2.0",
-    "dependency-cruiser": "^13.0.5",
+    "dependency-cruiser": "^17.0.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
