--- a/angular.json
+++ b/angular.json
@@ -223,6 +223,11 @@
                   "glob": "app.sqlite",
                   "input": "src/db",
                   "output": "assets/db"
+                },
+                {
+                  "glob": "**/*",
+                  "input": "src/images",
+                  "output": "images/"
                 }
               ]
             },
