--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build:test": "ng build --configuration=test-server && ./tools/copy-htaccess.sh test-server",
     "build:prod": "ng build --configuration=production && ./tools/copy-htaccess.sh production",
     "build:static:apache": "npm run db:build && ng build --configuration static-apache && ./tools/copy-htaccess.sh static-apache",
-    "build:static:local": "ng build --configuration=static-local",
     "build:static:gh-pages": "npm run db:build && ng build --configuration static-ghpages",
-    "serve:static": "npm run db:build && ng serve --configuration=static-local",
+    "build:static:local": "ng build --configuration=static-local",
+    "static:watch": "npm run db:build && npm-run-all -p build:static:watch serve:dist",
+    "build:static:watch": "ng build --configuration=static-local --watch",
+    "serve:dist": "http-server dist/gossembrot-portal_static -p 4201 -c-1",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "api": "node api/local-server.js",
@@ -80,6 +82,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "mysql2": "^3.5.0",
+    "npm-run-all": "^4.1.5",
     "papaparse": "^5.5.3",
     "prettier": "^3.0.0",
     "typescript": "~5.4.5",
