feat: finetune static local

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:static:local": "ng build --configuration=static-local",
     "static:watch": "npm run db:build && npm-run-all -p build:static:watch serve:dist",
     "build:static:watch": "ng build --configuration=static-local --watch",
-    "serve:dist": "http-server dist/gossembrot-portal_static -p 4201 -c-1",
+    "serve:dist": "browser-sync start --server dist/gossembrot-portal_static --files 'dist/gossembrot-portal_static/index.html,dist/gossembrot-portal_static/*.js,dist/gossembrot-portal_static/*.css' --ignore 'dist/gossembrot-portal_static/**/*.map' --watchOptions.awaitWriteFinish true --watchOptions.stabilityThreshold 600 --watchOptions.pollInterval 100 --reload-delay 150 --port 4201 --no-ui --no-open --single",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "api": "node api/local-server.js",
@@ -69,6 +69,7 @@
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.62.0",
     "better-sqlite3": "^12.2.0",
+    "browser-sync": "^3.0.4",
     "dependency-cruiser": "^17.0.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
