--- a/angular.json
+++ b/angular.json
@@ -258,8 +258,8 @@
                   "with": "src/environments/environment.static-ghpages.ts"
                 }
               ],
-              "baseHref": "./",
-              "deployUrl": "./",
+              "baseHref": "/gossembrot-portal/",
+              "deployUrl": "/gossembrot-portal/",
               "outputPath": "dist/gossembrot-portal_static",
               "outputHashing": "all",
               "assets": [
